--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
               <h4 class="h4 timeline-item-title">Bharat High Scool, Hinganghat</h4>
 
-              <span>2017 — 2018</span>
+              <span>2018 - 2022</span>
 
               <p class="timeline-text">
                 Completed foundational education. Engaged in creative projects, developed discipline and teamwork
